<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hint_label">"Add Amount "</string>
    <string name="btLabel_10">10%</string>
    <string name="btLabel_15">15%</string>
    <string name="btLabel_20">20%</string>
    <string name="tvLabel_TipIs">Tip is:</string>
    <string name="tv_TotalPay">0.0</string>
    <string name="tvLabel_TotalAmtPay">Total To Pay:</string>
    <string name="tv_TotalAmtPay">0.0</string>
    <string name="split_label">split bill:</string>
    <string name="splitValue">0</string>
    <string name="tv_label_eachPay">"Each Pay Amount: "</string>

</resources>
