<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/addAmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/hint_label"
        android:inputType="number|numberDecimal"
         >

        <requestFocus />
    </EditText>
    
    

    <TextView
        android:id="@+id/tvTipIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn10"
        android:layout_below="@+id/btn10"
        android:layout_marginTop="78dp"
        android:text="@string/tvLabel_TipIs"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addAmt"
        android:layout_below="@+id/addAmt"
        android:layout_marginTop="30dp"
        android:text="@string/btLabel_10" />

    <TextView
        android:id="@+id/tvlabel_totalpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTipIs"
        android:layout_below="@+id/tvTipIs"
        android:layout_marginTop="23dp"
        android:text="@string/tvLabel_TotalAmtPay"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/totalToPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvlabel_totalpay"
        android:layout_alignLeft="@+id/tipPay"
        android:text="@string/tv_TotalAmtPay"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tipPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvlabel_totalpay"
        android:layout_alignRight="@+id/addAmt"
        android:text="@string/tv_TotalPay"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTipIs"
        android:layout_alignRight="@+id/addAmt"
        android:text="@string/btLabel_20" />

    <Button
        android:id="@+id/btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTipIs"
        android:layout_centerHorizontal="true"
        android:text="@string/btLabel_15" />

</RelativeLayout>